[gd_scene load_steps=7 format=3 uid="uid://5a2urff3ogsf"]

[ext_resource type="PackedScene" uid="uid://dpnmewxusmk4u" path="res://scenes/dungeon/move_box_small.tscn" id="1_4g0dn"]
[ext_resource type="Script" uid="uid://nyweet8x8k2r" path="res://scenes/dungeon/move_box.gd" id="1_04nwk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_04nwk"]

[sub_resource type="Animation" id="Animation_vnikf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("move_box_small_line/box:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0oyh7"]
resource_name = "blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("move_box_small_line/box:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.881225, 0.569395, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ekxg1"]
_data = {
&"RESET": SubResource("Animation_vnikf"),
&"blink": SubResource("Animation_0oyh7")
}

[node name="Move_Box" type="Node3D"]
script = ExtResource("1_04nwk")

[node name="move_box_small_line" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.1, 5)
metadata/_edit_group_ = true

[node name="left" type="CSGBox3D" parent="move_box_small_line"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0, 3.35)
collision_layer = 8
collision_mask = 8
size = Vector3(0.2, 0.1, 5.3)

[node name="right" type="CSGBox3D" parent="move_box_small_line"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0, 3.35)
collision_layer = 8
collision_mask = 8
size = Vector3(0.2, 0.1, 5.3)

[node name="box" type="CSGBox3D" parent="move_box_small_line"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 8
collision_mask = 9
size = Vector3(1.4, 0.1, 1.4)
material = SubResource("StandardMaterial3D_04nwk")

[node name="move_box_small" parent="." instance=ExtResource("1_4g0dn")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ekxg1")
}

[connection signal="move_box_end" from="move_box_small" to="." method="_on_move_box_small_move_box_end"]
